--- a/EFPartyInvites/appsettings.json
+++ b/EFPartyInvites/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EFPartyInvites"
   }
 }
